syntax = "proto3";
option java_package = "org.ywb.raft.kvstore";
option java_outer_classname = "Protos";

message Redirect {
  string leader_id = 1;
}

message Success {

}
message Failure {
  int32 error_code = 1;
  string message = 2;
}
message SetCommand {
  string request_id = 1;
  string key = 2;
  bytes value = 3;
}
message GetCommand {
  string key = 1;
}
message GetCommandResponse {
  bool found = 1;
  bytes value = 2;
}